# services/product/model/product.js
@@ -67,6 +67,14 @@ const productSchema = new mongoose.Schema({
         type: Boolean,
         default: false
     },
+    dnsRef: {
+        type: String,
+        required: true
+    },
+    vanity: {
+        type: Boolean,
+        default: false
+    },
     active: {
         type: Boolean,
         default: true
